--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="email_error">Email error</string>
     <string name="password_error">Password error</string>
     <string name="repeat_password_error">Repeat password error</string>
+    <string name="quote_error">Each quote must have at least 10 characters</string>
 </resources>
